# hashfight

./: .run-all.sh.swp  CMakeLists.txt  GenerateData.cxx  HashingBenchmark.cu  HashingBenchmark.cxx  README.md  \  hostnames  run-all-cpu-Jan10.sh  run-all-cpu-Oct04.sh  run-all-cpu-Oct06.sh  run-all-cpu-Oct07.sh  run-all-cpu-Oct09.sh  run-all-cpu.sh  run-all-gpu-1.sh  run-all-gpu-2.sh  run-all-gpu-3.sh  run-all-gpu-Oct-02.sh  run-all-gpu-Oct-03.sh  run-all-gpu-Oct-04.sh  run-all-gpu-Oct-06.sh  run-all-gpu.sh  run-all.sh  run-hashfight.sh  test-hashfight.sh  test-tbb-map.sh  test-tbb-threads.sh  timings
cuckoo/: CMakeLists.txt  CuckooBenchmark.cxx  HashingBenchmark.cxx
generateData/: GenerateData.cxx  Makefile
hashfight/: CMakeLists.txt  HashFight.h  HashingBenchmark.cxx  HashingBenchmarkTBB.cxx  addThisCode
hashing-plots/: 103InsertTimes.csv  225M-Times.csv  25000000-0-10  Index-1.py  Index.py  generate-plot.sh
hashing-plots/k40/: .1.03-0-10.py.swp  1.03-0-10.csv  1.03-0-10.py  1.50-0-10.csv  1.50-0-10.py  2.0-0-10.csv  300000000-0-10.csv  300000000-0-10.py  300M.csv  500000000-1.03.csv  all-loads.csv  all-loads.py
hashing-plots/v100/: 1.03-0-10.csv  1.03-0-10.py  1.03-k40.csv  1.50-0-10.csv  1.50-0-10.py  300M-k40.csv  900000000-0-10.csv  900000000-0-10.py  900M-300M.csv  900M-300M.py  all-loads.csv  all-loads.py  data-size.py  vary-loads-v100.py  vary-loads.py  vary-query-v100.csv  vary-query.csv  vary-query.py
hashing-plots/xeon/: 1.03-v100.csv  1.03-xeon.csv  1.50-k40.csv  1.50-xeon.csv  900M-v100.csv  data-size-2.csv  data-size-xeon.py  data-size.csv  data-size.py  vary-data-3.csv  vary-data-xeon.csv  vary-loads-xeon.csv  vary-loads-xeon.py  vary-loads.csv  vary-loads.py  vary-query-k40.csv  vary-query.py
hashmap/: HashMap.cxx  Makefile
ioaccess/: ioaccess.cpp
results/Jan07-test-tbb/: job.sh  slurm-1999008.out  test-tbb-threads.sh
results/Jan09-test-tbb/: 1.03-0-10  100000000-1.03-0-10  150000000-1.03-0-10  50000000-1.03-0-10  job.sh  run-all-cpu-Jan09.sh  slurm-2001852.out  slurm-2002048.out  temp
results/Jan10/: 1.03-0-10  100000000-1.03-0-10  150000000-1.03-0-10  200000000-1.03-0-10  250000000-1.03-0-10  300000000-1.03-0-10  350000000-1.03-0-10  400000000-1.03-0-10  450000000-1.03-0-10  50000000-1.03-0-10  500000000-1.03-0-10  550000000-1.03-0-10  600000000-1.03-0-10  job.sh  slurm-2004274.out  temp
results/Jan11/: 1.03-0-10  1.5-0-10  100000000-1.03-0-10  100000000-1.5-0-10  1000000000-1.03-0-10  1000000000-1.5-0-10  1050000000-1.03-0-10  1050000000-1.5-0-10  1100000000-1.03-0-10  1100000000-1.5-0-10  1150000000-1.03-0-10  1150000000-1.5-0-10  1200000000-1.03-0-10  1200000000-1.5-0-10  1250000000-1.03-0-10  1250000000-1.5-0-10  1300000000-1.03-0-10  1300000000-1.5-0-10  1350000000-1.03-0-10  1350000000-1.5-0-10  1400000000-1.03-0-10  1400000000-1.5-0-10  1450000000-0-10  1450000000-1.03  1450000000-1.03-0-10  1450000000-1.03-1-10  1450000000-1.03-2-10  1450000000-1.03-3-10  1450000000-1.03-4-10  1450000000-1.03-5-10  1450000000-1.03-6-10  1450000000-1.03-7-10  1450000000-1.03-8-10  1450000000-1.03-9-10  1450000000-1.10-0-10  1450000000-1.15-0-10  1450000000-1.25-0-10  1450000000-1.40-0-10  1450000000-1.5  1450000000-1.5-0-10  (+53 more)
results/Jan12/: 1.03-9-10  500000000-1.03-9-10  job.sh  run-all-cpu-Jan12.sh  temp
results/Jan13/: run-all-cpu-Jan13.sh
results/Jan14/: 1-1.03-9-10  1-1450000000-0-10  1-1450000000-1.03  1.03-9-10  1450000000-0-10  1450000000-1.03  2-1.03-9-10  2-1450000000-0-10  2-1450000000-1.03  3-1.03-9-10  3-1450000000-0-10  3-1450000000-1.03  job.sh  run-all-cpu-Jan14.sh  slurm-2009134.out  temp
results/Jan15/: 1-1.03-0-10  1.03-0-10  job.sh  run-all-cpu-Jan15.sh
results/Oct01-1/: 1.50-0-10  100000000-1.50-0-10  1000000000-1.50-0-10  1050000000-1.50-0-10  1100000000-1.50-0-10  1150000000-1.50-0-10  1450000000-1.03  1450000000-1.03-2-10  1450000000-1.03-3-10  1450000000-1.03-4-10  1450000000-1.03-5-10  1450000000-1.03-6-10  1450000000-1.03-7-10  1450000000-1.03-8-10  1450000000-1.03-9-10  150000000-1.50-0-10  200000000-1.50-0-10  250000000-1.50-0-10  300000000-1.50-0-10  350000000-1.50-0-10  400000000-1.50-0-10  450000000-1.50-0-10  50000000-1.50-0-10  500000000-1.50-0-10  550000000-1.50-0-10  600000000-1.50-0-10  650000000-1.50-0-10  700000000-1.50-0-10  750000000-1.50-0-10  800000000-1.50-0-10  850000000-1.50-0-10  900000000-1.50-0-10  950000000-1.50-0-10  temp
results/Oct01-2/: 900000000-0-10  900000000-1.03-5-10  900000000-1.10-5-10  900000000-1.15-5-10  900000000-1.25-5-10  900000000-1.40-5-10  900000000-1.50-0-10  900000000-1.50-5-10  900000000-1.60-0-10  900000000-1.60-5-10  900000000-1.75-0-10  900000000-1.75-5-10  900000000-1.90-0-10  900000000-1.90-5-10  900000000-2.0-0-10  900000000-2.0-5-10  900000000-5-10  temp
results/Oct02-1/: 1450000000-1.03  1450000000-1.03-0-10  1450000000-1.03-1-10  1450000000-1.03-2-10  1450000000-1.03-3-10  1450000000-1.03-4-10  1450000000-1.03-5-10  1450000000-1.03-6-10  1450000000-1.03-7-10  1450000000-1.03-8-10  1450000000-1.03-9-10  2.0-0-10  850000000-2.0-0-10  900000000-2.0-0-10  README  temp
results/Oct02-2/: 1.50-0-10  100000000-1.50-0-10  1000000000-1.50-0-10  1050000000-1.50-0-10  1100000000-1.50-0-10  1150000000-1.50  1150000000-1.50-0-10  1150000000-1.50-1-10  1150000000-1.50-2-10  1150000000-1.50-3-10  1150000000-1.50-4-10  1150000000-1.50-5-10  1150000000-1.50-6-10  1150000000-1.50-7-10  1150000000-1.50-8-10  1150000000-1.50-9-10  150000000-1.50-0-10  200000000-1.50-0-10  250000000-1.50-0-10  300000000-1.50-0-10  350000000-1.50-0-10  400000000-1.50-0-10  450000000-1.50-0-10  50000000-1.50-0-10  500000000-1.50-0-10  550000000-1.50-0-10  600000000-1.50-0-10  650000000-1.50-0-10  700000000-1.50-0-10  750000000-1.50-0-10  800000000-1.50-0-10  850000000-1.50-0-10  900000000-1.50-0-10  950000000-1.50-0-10  README  temp
results/Oct02-tbb/: 1.5-0-10  100000000-1.5-0-10  150000000-1.5-0-10  (+18 more)
thrust/: Makefile  SortSearch  SortSearch.cu
thrust-tbb/: Makefile  SortSearch  SortSearch.cpp
unordered-map/: Makefile  UnorderedMap  UnorderedMap.cxx
warpdrive/: Makefile  test_plan.cu
(+567 files in other folders)
